add spotbugs to pom and fix existing detected issues